# ZK-IntentBook

./: JUDGES.md  README.md  eslint.config.mjs  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/auth/callback/: page.tsx
app/demo/: page.tsx
app/roadmap/: page.tsx
components/ui/: sidebar.tsx
contracts/: Move.toml
contracts/sources/: amm_strategies.move  intent_registry.move  lending_pool.move  settlement.move  zk_verifier.move
solver/: package.json  tsconfig.json
solver/src/: crypto.ts  index.ts  logger.ts  orderbook.ts  prover.ts  settlement.ts  solver.ts  types.ts
src/client/components/features/: AdvancedTrading.tsx  IntentComparator.tsx  LendingDashboard.tsx  PrivateIntent.tsx  ReferralDashboard.tsx  Referrals.tsx  SimpleSwap.tsx  SolverRace.tsx  StrategyDashboard.tsx  TradingMode.tsx  WhySuiPanel.tsx  ZkLogin.tsx  index.ts
src/client/components/layouts/: MainLayout.tsx
src/client/components/ui/: chart.tsx  sidebar.tsx
src/client/hooks/: index.ts  useBalance.ts  useOrderBook.ts  useReferrals.ts  useSwap.ts  useWallet.ts
src/client/providers/: ThemeProvider.tsx  WalletProvider.tsx  ZkLoginProvider.tsx  index.ts
src/client/state/: intentStore.ts
src/components/ui/: sheet.tsx
src/server/actions/: analysis.actions.ts  intent.actions.ts  lending.actions.ts  orderbook.actions.ts  referral.actions.ts  solver.actions.ts  swap.actions.ts
src/server/config/: sui.ts
src/server/security/: encryption.ts  index.ts
src/server/services/: deepbook.service.ts  lending.service.ts  zklogin.service.ts
src/server/services/lifi/: lifi-sui.services.ts  lifi-utils.ts
src/shared/constants/: assets.ts  index.ts  pools.ts
src/shared/schemas/: index.ts  intent.schema.ts  order.schema.ts
src/shared/types/: index.ts  intent.ts  order.ts  orderbook.ts  proof.ts  zklogin.ts
src/shared/utils/: formatting.ts
zk-prover/: Cargo.toml
zk-prover/src/: main.rs  prover.rs  types.rs
zk-prover/src/api/: handlers.rs
zk-prover/src/circuits/: intent_execution.rs  mod.rs
