[package]
name = "zk-intent-prover"
version = "0.1.0"
edition = "2024"
authors = ["ZK IntentBook Team"]
description = "Zero-knowledge proof generator for private intent execution verification"
license = "MIT"

[dependencies]
# Plonky3 core crates
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Crypto
sha2 = "0.10"
rand = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server for prover service
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bin]]
name = "prover-service"
path = "src/main.rs"

[[bench]]
name = "proof_generation"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
